force-app/main/default/objects/TASKRAY__trBoardFilter__c/TASKRAY__trBoardFilter__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the available Project Filters.</description>
    <label>TaskRay Board Filter</label>
    <nameField>
        <label>TaskRay Board Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Board Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>