force-app/main/default/objects/TASKRAY__trBoardFilter__c/fields/TASKRAY__filterType__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__filterType__c</fullName>
    <description>Possible values: (&#39;task&#39;, &#39;project&#39;)</description>
    <inlineHelpText>Possible values: (&#39;task&#39;, &#39;project&#39;)</inlineHelpText>
    <label>Filter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>