force-app/main/default/objects/TASKRAY__trBoardFilter__c/fields/TASKRAY__logicConfig__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__logicConfig__c</fullName>
    <label>Logic Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>