force-app/main/default/objects/TASKRAY__trBoardFilter__c/fields/TASKRAY__trFilterScope__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trFilterScope__c</fullName>
    <description>Possible Task values: (&apos;allTasks&apos;, &apos;myTasks&apos;). Possible Project values: (&apos;allProjects&apos;, &apos;myProjects&apos;)</description>
    <externalId>true</externalId>
    <inlineHelpText>Possible Task values: (&apos;allTasks&apos;, &apos;myTasks&apos;). Possible Project values: (&apos;allProjects&apos;, &apos;myProjects&apos;)</inlineHelpText>
    <label>Filter Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>