force-app/main/default/objects/TASKRAY__trBoardFilter__c/fields/TASKRAY__User__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter for User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Board_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>