force-app/main/default/objects/TASKRAY__trBoardFilter__c/listViews/TASKRAY__All.listView-meta.xml
<ListView>
    <fullName>TASKRAY__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>